WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228336
Fix for [WebAccessibilityObjectWrapper lineRectsAndText] to properly handle replacement nodes and SVG text.
https://bugs.webkit.org/show_bug.cgi?id=228336
Summary
Fix for [WebAccessibilityObjectWrapper lineRectsAndText] to properly handle r...
Andres Gonzalez
Reported
2021-07-27 11:13:19 PDT
Fix for [WebAccessibilityObjectWrapper lineRectsAndText] to properly handle replacement nodes and SVG text.
Attachments
Patch
(7.30 KB, patch)
2021-07-27 11:34 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(8.44 KB, patch)
2021-07-28 17:29 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(11.59 KB, patch)
2021-07-30 12:41 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(13.76 KB, patch)
2021-07-31 13:59 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-07-27 11:13:32 PDT
<
rdar://problem/81172124
>
Andres Gonzalez
Comment 2
2021-07-27 11:34:06 PDT
Created
attachment 434300
[details]
Patch
Darin Adler
Comment 3
2021-07-27 13:49:19 PDT
Comment on
attachment 434300
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=434300&action=review
> Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:2881 > + [text appendAttributedString:[[NSAttributedString alloc] initWithString:label]];
This isn’t ARC, so I think the leaks the attributed string. Need to release it.
Andres Gonzalez
Comment 4
2021-07-28 17:29:07 PDT
Created
attachment 434479
[details]
Patch
Andres Gonzalez
Comment 5
2021-07-28 17:52:59 PDT
(In reply to Darin Adler from
comment #3
)
> Comment on
attachment 434300
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=434300&action=review
> > > Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:2881 > > + [text appendAttributedString:[[NSAttributedString alloc] initWithString:label]]; > > This isn’t ARC, so I think the leaks the attributed string. Need to release > it.
Thanks, I changed it to: auto label = adoptNS([[NSAttributedString alloc] initWithString:static_cast<WebAccessibilityObjectWrapper *>(item).accessibilityLabel]); [text appendAttributedString:label.get()];
Andres Gonzalez
Comment 6
2021-07-30 12:41:55 PDT
Created
attachment 434653
[details]
Patch
Andres Gonzalez
Comment 7
2021-07-31 13:59:49 PDT
Created
attachment 434705
[details]
Patch
EWS
Comment 8
2021-08-02 07:43:21 PDT
Committed
r280529
(
240161@main
): <
https://commits.webkit.org/240161@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434705
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug