Fix for [WebAccessibilityObjectWrapper lineRectsAndText] to properly handle replacement nodes and SVG text. https://bugs.webkit.org/show_bug.cgi?id=228336 <rdar://problem/81172124>

Reviewed by Chris Fleizach and Darin Adler.

Source/WebCore:

Test: LayoutTests/accessibility/ios-simulator/element-line-rects-and-text.html

- Renamed stringsForSimpleRange to better reflect the fact that this
method can return strings and AXObjects.
- Handles the case where contentForSimpleRange returns AXObjects
corresponding to replacement objects. This fixes the cases of images and
SVG text.
- Fixed the problem with soft linebreaks where the start of the next
line was skipping the first character in the line.

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper contentForSimpleRange:attributed:]):
(-[WebAccessibilityObjectWrapper arrayOfTextForTextMarkers:attributed:]):
(-[WebAccessibilityObjectWrapper lineRectsAndText]):
(-[WebAccessibilityObjectWrapper stringsForSimpleRange:attributed:]):
Renamed to contentForSimpleRange since it is returns an array of strings
and AXObjects.

LayoutTests:

- Expanded this test to cover the case of an image element and SVG text.
- Added the test case of a paragraph with soft linebreaks.

* accessibility/ios-simulator/element-line-rects-and-text-expected.txt:
* accessibility/ios-simulator/element-line-rects-and-text.html:


Canonical link: https://commits.webkit.org/240161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280529 268f45cc-cd09-0410-ab3c-d52691b4dbfc